tests/machine/x/java/map_index.error
line 0: javac error: exit status 1
/tmp/TestCompileValidProgramsmap_index3150615223/001/Main.java:3: error: incompatible types: no instance(s) of type variable(s) K,V exist so that Map<K,V> conforms to int
	static int m = java.util.Map.of("a", 1, "b", 2);
	                               ^
  where K,V are type-variables:
    K extends Object declared in method <K,V>of(K,V,K,V)
    V extends Object declared in method <K,V>of(K,V,K,V)
/tmp/TestCompileValidProgramsmap_index3150615223/001/Main.java:5: error: int cannot be dereferenced
	System.out.println(m.get("b"));
	                    ^
2 errors


  1| let m = {"a": 1, "b": 2}
  2| print(m["b"])
